# My_first_boat

robot_description/: CMakeLists.txt  package.xml  setup.py
robot_description/config/: diff_drive_controller.yaml
robot_description/launch/: bringup.launch.py  display.launch.py  gazebo.launch.py
robot_description/meshes/: Mecanum_wheels_assembly_left_v4.stl  Motor_base_assembeled_rev1.stl  Simple_wheel_v1.stl  Top_cover v5.stl  hand_v3.stl  head_v4.stl  motor_base_collision.stl  outer_shell_top.stl
robot_description/rviz/: rviz.rviz
robot_description/urdf/: firstBot.xacro  thaara_bot.xacro  thaara_bot_control.xacro  thaara_control.xacro  thaara_mol.xacro
